cambios intentando curso platzit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>
-        Hola Estudiantes Este Es Mi Sitio Web Sigueme En Twitter
+        Hola amigos siguanme en twitter isaarango123 fdsdff 
+    
     </p>
 </body>
 </html>
